Properly fix so only thehack.png remains visible at the end

--- a/css/base.css
+++ b/css/base.css
@@ -78,10 +78,10 @@ body {
 	clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 	border-radius: 0;
 	opacity: 0;
-	transition: opacity 1s ease-out;
+	transition: opacity 2s ease-out;
 }
 
-.gallery--switch.gallery--grid6 .gallery__item.pos-6 {
+.gallery--switch.gallery--grid6 .pos-6 {
 	opacity: 1;
 }
 
